tests/baselines/reference/voidArrayLit.errors.txt
==== tests/cases/compiler/voidArrayLit.ts (1 errors) ====
    var va = [(() => {})()]; // ok
    (() => {})(); // ok
    function foo(s:string) {}
    foo((()=>{})()); // error
        ~~~~~~~~~~
!!! error TS2345: Argument of type 'void' is not assignable to parameter of type 'string'.
    